--- a/index.html
+++ b/index.html
@@ -56,20 +56,21 @@
     <div class="container-center">
         <div class="text-image-container">
             <h1>ENTEC 2024 - 11º Edição</h1>
-            <p>A ENTEC (Encontro Tecnológico) chega à sua décima primeira edição em 2024, consolidando-se como um evento tradicional e de grande importância no cenário educacional e tecnológico do Instituto Federal do Tocantins. Criada em 2013 pelo professor Thiago Guimarães, professor do curso técnico em Redes de Computadores, a ENTEC tem como objetivo promover o curso, aumentar sua visibilidade e incentivar a participação dos alunos de todas as turmas.</p>
-        </section>
-        <section>
-            <p>Nesta edição, o evento terá como temas centrais Cibersegurança e Robótica, duas áreas essenciais no desenvolvimento tecnológico atual e que impactam diretamente a sociedade e o mercado de trabalho. Ao longo de sua história, a ENTEC tem buscado não apenas explorar esses tópicos, mas também criar um ambiente colaborativo e dinâmico, estimulando a troca de experiências entre estudantes e profissionais da área.</p>
-        </section>
-        <section>
-            <p>As palestras e atividades serão conduzidas por membros da nossa turma<a href="https://www.instagram.com/3a__redes_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer"> 3a__redes_</a>, que irão compartilhar seus conhecimentos e vivências sobre cibersegurança e robótica. Além de ampliar o entendimento sobre esses temas, o evento também fortalece o protagonismo dos próprios alunos, estimulando a confiança e a capacidade de disseminar conhecimento.</p>
-        </section>
-        <section>
-            <p>A ENTEC é, portanto, uma excelente oportunidade para aprender, interagir e se aprofundar nos temas mais relevantes da atualidade, contribuindo para a formação de uma geração de profissionais mais preparados e atualizados com as tendências do mercado tecnológico.</p>
-        </section>
+            <section class="container-section">
+                <p>A ENTEC (Encontro Tecnológico) chega à sua décima primeira edição em 2024, consolidando-se como um evento tradicional e de grande importância no cenário educacional e tecnológico do Instituto Federal do Tocantins. Criada em 2013 pelo professor Thiago Guimarães, professor do curso técnico em Redes de Computadores, a ENTEC tem como objetivo promover o curso, aumentar sua visibilidade e incentivar a participação dos alunos de todas as turmas.</p>
+            </section>
+            <section class="container-section">
+                <p>Nesta edição, o evento terá como temas centrais Cibersegurança e Robótica, duas áreas essenciais no desenvolvimento tecnológico atual e que impactam diretamente a sociedade e o mercado de trabalho. Ao longo de sua história, a ENTEC tem buscado não apenas explorar esses tópicos, mas também criar um ambiente colaborativo e dinâmico, estimulando a troca de experiências entre estudantes e profissionais da área.</p>
+            </section>
+            <section class="container-section">
+                <p>As palestras e atividades serão conduzidas por membros da nossa turma<a href="https://www.instagram.com/3a__redes_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer"> 3a__redes_</a>, que irão compartilhar seus conhecimentos e vivências sobre cibersegurança e robótica. Além de ampliar o entendimento sobre esses temas, o evento também fortalece o protagonismo dos próprios alunos, estimulando a confiança e a capacidade de disseminar conhecimento.</p>
+            </section>
+            <section class="container-section">
+                <p>A ENTEC é, portanto, uma excelente oportunidade para aprender, interagir e se aprofundar nos temas mais relevantes da atualidade, contribuindo para a formação de uma geração de profissionais mais preparados e atualizados com as tendências do mercado tecnológico.</p>
+            </section>
         </div>
         <div class="container-img">           
-            <img src="Imagens/logo_entec2024.jpg" alt="Imagem da ENTEC" class="image">
+            <img src="Imagens/entec_logo_transparente.png" alt="Imagem da ENTEC" class="image">
        </div>
     </div>
     <footer>
