--- a/palestras.html
+++ b/palestras.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Pacifico&family=Permanent+Marker&family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="palestras.css">
+    <link rel="shortcut icon" href="Imagens/logo_entec2024.jpg" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom">
