--- a/programacao.html
+++ b/programacao.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Pacifico&family=Permanent+Marker&family=Rubik+Mono+One&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="palestras.css">
+    <link rel="stylesheet" href="programacao.css">
     <link rel="shortcut icon" href="Imagens/logo_entec2024.jpg" type="image/x-icon">
 </head>
 <body>
@@ -51,13 +51,10 @@
       </div>
       <div class="carousel-inner">
           <div class="carousel-item active">
-              <img src="Imagens/palestras.jpg" class="d-block img-fluid custom-image" alt="Slide 1">
+              <img src="Imagens/Imagem do WhatsApp de 2024-11-18 à(s) 21.03.43_e45637f6.jpg" class="d-block img-fluid custom-image" alt="Entec-2024">
           </div>
           <div class="carousel-item">
-              <img src="Imagens/palestras.jpg" class="d-block img-fluid custom-image" alt="Slide 2">
-          </div>
-          <div class="carousel-item">
-              <img src="Imagens/palestras.jpg" class="d-block img-fluid custom-image" alt="Slide 3">
+              <img src="Imagens/Oque a ENTEC.jpg" class="d-block img-fluid custom-image" alt="O que é a ENTEC 2024">
           </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -69,7 +66,20 @@
           <span class="visually-hidden">Next</span>
       </button>
     </div>
+    <footer>
+        <div class="footer-item">
+            <p>Organização 3º A TRC</p>
+            <img src="Imagens/Instagram_logo.png" height="50" alt="">
+            <a href="https://www.instagram.com/3a__redes_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer">3a__redes_</a>
+        </div>
+        <div class="footer-item">
+            <p>Desenvolvedor</p>
+            <img src="Imagens/Instagram_logo.png" height="50" alt="">
+            <a href="https://www.instagram.com/arthur.igf/" target="_blank" rel="noopener noreferrer">arthur.igf</a>
+        </div>
+    </footer>
 
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
