--- a/palestras.html
+++ b/palestras.html
@@ -54,10 +54,7 @@
               <img src="Imagens/palestras.jpg" class="d-block img-fluid custom-image" alt="Slide 1">
           </div>
           <div class="carousel-item">
-              <img src="Imagens/palestras.jpg" class="d-block img-fluid custom-image" alt="Slide 2">
-          </div>
-          <div class="carousel-item">
-              <img src="Imagens/palestras.jpg" class="d-block img-fluid custom-image" alt="Slide 3">
+              <img src="Imagens/palestras2.jpg" class="d-block img-fluid custom-image" alt="Slide 2">
           </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
